--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <body>
   <h1>Snake!</h1>
+  <p>Check the <a href="https://github.com/phgsouto/p5-snake">source code</a> in Github!</p>
+  <br>
   <hr>
 </body>
 
